bench/tests/plans/snapshots/r#mod__plans__wind_farm__Wind Farm - GroupedProduction2 (Execution Plan, ObjectId).snap
---
source: bench/tests/plans/wind_farm.rs
expression: "&string"
---
ProjectionExec: expr=[site_label@0 as site_label, wtur_label@1 as wtur_label, year@2 as year, month@3 as month, day@4 as day, hour@5 as hour, minute_10@6 as minute_10, ENC_PT(<uuid>@7) as avg_val]
  AggregateExec: mode=Single, gby=[site_label@0 as site_label, wtur_label@1 as wtur_label, ENC_PT(year@7) as year, ENC_PT(month@6) as month, ENC_PT(day@5) as day, ENC_PT(hour@4) as hour, ENC_PT(minute_10@3) as minute_10], aggr=[<uuid>]
    ProjectionExec: expr=[site_label@1 as site_label, wtur_label@3 as wtur_label, val@11 as val, minute_10@13 as minute_10, hour@14 as hour, day@15 as day, month@16 as month, year@17 as year]
      DecodeObjectIdsExec: projections=[site, site_label, wtur_asp, wtur_label, wtur, gensys_asp, gensys, generator_asp, generator, ts, dp, val -> val, t, minute_10, hour, day, month, year]
        FilterExec: EBV(EQ(ENC_TF(site_label@1), 2:{value:Wind Mountain,language:})) AND (EBV(EQ(ENC_TF(wtur_label@3), 2:{value:A1,language:})) OR EBV(EQ(ENC_TF(wtur_label@3), 2:{value:A2,language:})) OR EBV(EQ(ENC_TF(wtur_label@3), 2:{value:A3,language:})) OR EBV(EQ(ENC_TF(wtur_label@3), 2:{value:A4,language:})) OR EBV(EQ(ENC_TF(wtur_label@3), 2:{value:A5,language:})) OR EBV(EQ(ENC_TF(wtur_label@3), 2:{value:A6,language:})) OR EBV(EQ(ENC_TF(wtur_label@3), 2:{value:A7,language:})) OR EBV(EQ(ENC_TF(wtur_label@3), 2:{value:A8,language:})) OR EBV(EQ(ENC_TF(wtur_label@3), 2:{value:A9,language:})) OR EBV(EQ(ENC_TF(wtur_label@3), 2:{value:A10,language:}))) AND EBV(GEQ(ENC_TF(t@12), 5:{date_time_type:0,value:63797446013.000000000000000000,offset:})) AND EBV(LEQ(ENC_TF(t@12), 5:{date_time_type:0,value:63797492813.000000000000000000,offset:}))
          DecodeObjectIdsExec: projections=[site, site_label -> site_label, wtur_asp, wtur_label -> wtur_label, wtur, gensys_asp, gensys, generator_asp, generator, ts, dp, val, t, minute_10, hour, day, month, year]
            ProjectionExec: expr=[site__oid@0 as site, site_label__oid@1 as site_label, wtur_asp__oid@2 as wtur_asp, wtur_label__oid@3 as wtur_label, wtur__oid@4 as wtur, gensys_asp__oid@5 as gensys_asp, gensys__oid@6 as gensys, generator_asp__oid@7 as generator_asp, generator__oid@8 as generator, ts__oid@9 as ts, dp__oid@10 as dp, val__oid@11 as val, t@12 as t, MUL(4:4:10, FLOOR(DIV(MINUTES(ENC_TF(t@12)), 4:2:Some(<uuid>),36,18))) as minute_10, HOURS(ENC_TF(t@12)) as hour, DAY(ENC_TF(t@12)) as day, MONTH(ENC_TF(t@12)) as month, YEAR(ENC_TF(t@12)) as year]
              DecodeObjectIdsExec: projections=[site__oid, site_label__oid, wtur_asp__oid, wtur_label__oid, wtur__oid, gensys_asp__oid, gensys__oid, generator_asp__oid, generator__oid, ts__oid, dp__oid, val__oid, t__oid -> t]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(dp__oid@10, dp__oid@0)], projection=[site__oid@0, site_label__oid@1, wtur_asp__oid@2, wtur_label__oid@3, wtur__oid@4, gensys_asp__oid@5, gensys__oid@6, generator_asp__oid@7, generator__oid@8, ts__oid@9, dp__oid@10, val__oid@11, t__oid@13]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(dp__oid@10, dp__oid@0)], projection=[site__oid@0, site_label__oid@1, wtur_asp__oid@2, wtur_label__oid@3, wtur__oid@4, gensys_asp__oid@5, gensys__oid@6, generator_asp__oid@7, generator__oid@8, ts__oid@9, dp__oid@10, val__oid@12]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(ts__oid@9, ts__oid@0)], projection=[site__oid@0, site_label__oid@1, wtur_asp__oid@2, wtur_label__oid@3, wtur__oid@4, gensys_asp__oid@5, gensys__oid@6, generator_asp__oid@7, generator__oid@8, ts__oid@9, dp__oid@11]
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(ts__oid@9, ts__oid@0)], projection=[site__oid@0, site_label__oid@1, wtur_asp__oid@2, wtur_label__oid@3, wtur__oid@4, gensys_asp__oid@5, gensys__oid@6, generator_asp__oid@7, generator__oid@8, ts__oid@9]
                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator__oid@8, generator__oid@0)], projection=[site__oid@0, site_label__oid@1, wtur_asp__oid@2, wtur_label__oid@3, wtur__oid@4, gensys_asp__oid@5, gensys__oid@6, generator_asp__oid@7, generator__oid@8, ts__oid@10]
                          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator__oid@8, generator__oid@0)], projection=[site__oid@0, site_label__oid@1, wtur_asp__oid@2, wtur_label__oid@3, wtur__oid@4, gensys_asp__oid@5, gensys__oid@6, generator_asp__oid@7, generator__oid@8]
                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator_asp__oid@7, generator_asp__oid@1)], projection=[site__oid@0, site_label__oid@1, wtur_asp__oid@2, wtur_label__oid@3, wtur__oid@4, gensys_asp__oid@5, gensys__oid@6, generator_asp__oid@7, generator__oid@8]
                              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys__oid@6, gensys__oid@0)], projection=[site__oid@0, site_label__oid@1, wtur_asp__oid@2, wtur_label__oid@3, wtur__oid@4, gensys_asp__oid@5, gensys__oid@6, generator_asp__oid@8]
                                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys__oid@6, gensys__oid@0)], projection=[site__oid@0, site_label__oid@1, wtur_asp__oid@2, wtur_label__oid@3, wtur__oid@4, gensys_asp__oid@5, gensys__oid@6]
                                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys_asp__oid@5, gensys_asp__oid@1)], projection=[site__oid@0, site_label__oid@1, wtur_asp__oid@2, wtur_label__oid@3, wtur__oid@4, gensys_asp__oid@5, gensys__oid@6]
                                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur__oid@4, wtur__oid@0)], projection=[site__oid@0, site_label__oid@1, wtur_asp__oid@2, wtur_label__oid@3, wtur__oid@4, gensys_asp__oid@5]
                                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur__oid@4, wtur__oid@0)], projection=[site__oid@0, site_label__oid@1, wtur_asp__oid@2, wtur_label__oid@3, wtur__oid@4, gensys_asp__oid@6]
                                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur_asp__oid@2, wtur_asp__oid@1)], projection=[site__oid@0, site_label__oid@1, wtur_asp__oid@2, wtur_label__oid@3, wtur__oid@4]
                                          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur_asp__oid@2, wtur_asp__oid@0)], projection=[site__oid@0, site_label__oid@1, wtur_asp__oid@2, wtur_label__oid@4]
                                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(site__oid@0, site__oid@0)], projection=[site__oid@0, site_label__oid@1, wtur_asp__oid@3]
                                              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(site__oid@0, site__oid@0)], projection=[site__oid@0, site_label__oid@2]
                                                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?site <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#Site>], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as site__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 56 AND object@3 = 66, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 56 AND 56 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 66 AND 66 <= object_max@6, required_guarantees=[object in (66), predicate in (56)]
                                                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?site <http://www.w3.org/2000/01/rdf-schema#label> ?site_label], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as site__oid, object@3 as site_label__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 57 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 57 AND 57 <= predicate_max@2, required_guarantees=[predicate in (57)]
                                              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?site <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?wtur_asp], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as site__oid, object@3 as wtur_asp__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 63 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 63 AND 63 <= predicate_max@2, required_guarantees=[predicate in (63)]
                                            ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?wtur_asp <http://www.w3.org/2000/01/rdf-schema#label> ?wtur_label], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as wtur_asp__oid, object@3 as wtur_label__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 57 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 57 AND 57 <= predicate_max@2, required_guarantees=[predicate in (57)]
                                          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?wtur <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?wtur_asp], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as wtur__oid, object@3 as wtur_asp__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 64 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 64 AND 64 <= predicate_max@2, required_guarantees=[predicate in (64)]
                                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?wtur <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?gensys_asp], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as wtur__oid, object@3 as gensys_asp__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 63 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 63 AND 63 <= predicate_max@2, required_guarantees=[predicate in (63)]
                                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?wtur <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#A>], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as wtur__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 56 AND object@3 = 71 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 56 AND 56 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 71 AND 71 <= object_max@6, required_guarantees=[object in (71), predicate in (56)]
                                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?gensys <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?gensys_asp], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as gensys__oid, object@3 as gensys_asp__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 64 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 64 AND 64 <= predicate_max@2, required_guarantees=[predicate in (64)]
                                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?gensys <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#RA>], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as gensys__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 56 AND object@3 = 87 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 56 AND 56 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 87 AND 87 <= object_max@6, required_guarantees=[object in (87), predicate in (56)]
                                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?gensys <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?generator_asp], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as gensys__oid, object@3 as generator_asp__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 63 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 63 AND 63 <= predicate_max@2, required_guarantees=[predicate in (63)]
                              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?generator <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?generator_asp], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as generator__oid, object@3 as generator_asp__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 64 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 64 AND 64 <= predicate_max@2, required_guarantees=[predicate in (64)]
                            ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?generator <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#GAA>], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as generator__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 56 AND object@3 = 89 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 56 AND 56 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 89 AND 89 <= object_max@6, required_guarantees=[object in (89), predicate in (56)]
                          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?generator <https://github.com/magbak/chrontext#hasTimeseries> ?ts], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as generator__oid, object@3 as ts__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 65 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 65 AND 65 <= predicate_max@2, required_guarantees=[predicate in (65)]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?ts <http://www.w3.org/2000/01/rdf-schema#label> "Production"], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as ts__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 57 AND object@3 = 95 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 57 AND 57 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 95 AND 95 <= object_max@6, required_guarantees=[object in (95), predicate in (57)]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?ts <https://github.com/magbak/chrontext#hasDataPoint> ?dp], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as ts__oid, object@3 as dp__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 2854 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 2854 AND 2854 <= predicate_max@2, required_guarantees=[predicate in (2854)]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?dp <https://github.com/magbak/chrontext#hasValue> ?val], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as dp__oid, object@3 as val__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 2853 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 2853 AND 2853 <= predicate_max@2, required_guarantees=[predicate in (2853)]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?dp <https://github.com/magbak/chrontext#hasTimestamp> ?t], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as dp__oid, object@3 as t__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 2852 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 2852 AND 2852 <= predicate_max@2, required_guarantees=[predicate in (2852)]
